--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   This website is an example on how to use my gallery blog post to add a
   photo gallery to your blog/website.
-baseurl: "/jekyll-image-gallery-example" # the subpath of your site, e.g. /blog
-url: "//opieters.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "/jekyll-image-gallery" # the subpath of your site, e.g. /blog
+url: "//donaldboulton.github.io" # the base hostname & protocol for your site
+twitter_username: donboulton  
+github_username:  donaldboulton
 
 # Build settings
 markdown: kramdown
